--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@uiw/react-md-editor": "^3.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
