--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "publishToHeroku": "cd ../ && git subtree push --prefix server heroku-app-backend main || true"
+    "publishToHeroku": "cd ../ && git subtree push --prefix server heroku-app-backend main || true",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
